--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -1,4 +1,163 @@
-h1,
-h2 {
-  color: brown;
+
+.faq {
+  background-color: #1c1d20;
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+
+
+.faq-title {
+  font-size: 16px;
+  margin-bottom: 32px;
+  font-family: "Inter Tight", sans-serif;
+  font-weight: 600;
+  line-height: 150%;
+  letter-spacing: -0.02em;
+  color: rgba(250, 250, 250, 0.4);
+}
+
+.faq-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  max-width: 1376px;
+  margin: 0 auto;
+  position: relative;
+}
+.faq-divider {
+  display: block;
+  width: 2px;
+  background-color: rgba(250, 250, 250, 0.2);
+  height: 100%;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translateX(-50%);
+}
+
+
+@media (max-width: 1439px) {
+  .faq-divider {
+    display: none;
+  }
+}
+
+.accordion-container {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  flex-direction: column;
+
+}
+.accordion-item {
+  border-bottom: 1px solid #444;
+  width: 100%;
+  overflow: hidden;
+}
+
+
+
+.ac-trigger {
+  width: 100%;
+  min-height: 30px;
+  background: none;
+  border: none;
+  text-align: left;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: background-color 0.3s ease-in-out;
+  box-sizing: border-box;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 150%;
+  letter-spacing: -0.02em;
+  color: #fafafa;
+  word-wrap: break-word;
+  white-space: normal;
+  padding-left: 0;
+  padding-top: 32px;
+  padding-bottom: 26px;
+}
+
+
+.accordion-icon {
+  transition: transform 0.3s ease-in-out;
+  border: 1px solid rgba(250, 250, 250, 0.2);
+  border-radius: 100px;
+  padding: 10px;
+  width: 40px;
+  height: 40px;
+  margin-left: 10px;
+  flex-shrink: 0;
+  fill: rgba(250, 250, 250, 0.6);
+}
+
+
+.accordion-item.is-active .accordion-icon {
+  transform: rotate(180deg);
+}
+
+
+.ac-panel {
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: max-height 0.4s ease-in-out, opacity 0.4s ease-in-out;
+  padding: 0px;
+  margin-bottom: 26px;
+  color: rgba(250, 250, 250, 0.6);
+  text-align: left;
+}
+
+
+.accordion-item.is-active .ac-panel {
+  max-height: 500px;
+  opacity: 1;
+}
+
+
+@media (min-width: 1440px) {
+  .accordion-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 32px;
+  }
+}
+
+
+@media (max-width: 1439px) {
+  .accordion-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+
+
+
+  .accordion-item[data-order="1"] { order: 1; }
+  .accordion-item[data-order="3"] { order: 2; }
+  .accordion-item[data-order="5"] { order: 3; }
+  .accordion-item[data-order="2"] { order: 4; }
+  .accordion-item[data-order="4"] { order: 5; }
+  .accordion-item[data-order="6"] { order: 6; }
+}
+
+
+@media (max-width: 767px) {
+  .accordion-container {
+    width: 100%;
+  }
+
+  .ac-trigger {
+    width: 100%;
+  }
 }
